--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+  <%-# Here we are handling flash msgs for every view -%>
+  <% flash.each do |name,msg| %>
+    <ul>
+      <li> <%= msg%> <li>
+    </ul>
+  <% end %>
+
+  
 <%= yield %>
 
 </body>
