--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,5 @@
 
 <p> Tiltle: <%= @article.title %> </p>
 <p> Description: <%= @article.description %> </p>
+
+<%= link_to "Back to Index" , articles_path %>
