--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,4 +3,5 @@
 <p> Tiltle: <%= @article.title %> </p>
 <p> Description: <%= @article.description %> </p>
 
+<%= link_to "Edit this article" , edit_article_path(@article) %> |
 <%= link_to "Back to Index" , articles_path %>
